# sara-shield-pacs

./: .gitignore  .gitmodules  LICENSE  README.md
safety_shield/: .clang-format  CMakeLists.txt  __init__.py
safety_shield/bindings/: safety_shield_bindings.cpp
safety_shield/cmake/: safety_shieldConfig.cmake.in
safety_shield/config/: trajectory_parameters_single_joint.yaml
safety_shield/include/safety_shield/: human_reach.h  long_term_traj.h  path.h  planning_utils.h  planning_utils_ruckig_pro.h  robot_reach.h  safety_shield.h  verification_utils.h  verify.h  verify_iso.h
safety_shield/scripts/: plot_motion.py
safety_shield/src/: config_utils.cc  debug_ruckig.cc  human_reach.cc  long_term_traj.cc  path.cc  planning_utils.cc  planning_utils_ruckig_pro.cc  robot_reach.cc  safety_shield.cc  trajectory_utils.cc  verification_utils.cc  verify_iso.cc
safety_shield/tests/bindings/: test_ltt.py  test_safety_shield.py
safety_shield/tests/include/: path_fixture.h  safety_shield_fixture.h
safety_shield/tests/src/: human_reach_tests.cc  long_term_traj_tests.cc  planning_utils_tests.cc  robot_reach_tests.cc  safety_shield_tests.cc  verify_iso_tests.cc
